Fix 404 container too large

--- a/src/assets/sass/_containers.sass
+++ b/src/assets/sass/_containers.sass
@@ -1,7 +1,7 @@
 /* -------------------- Containers -------------------- */
 .error-container
     display: flex
-    height: 100vh
+    height: 90vh
     align-items: center
     justify-content: center
     padding: 0 15px
